--- a/main.html
+++ b/main.html
@@ -10,7 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+ <h1>Understanding Time, Space, and Complexity</h1>
 
+    <p>
+        Time complexity refers to the computational complexity that describes the amount of time an algorithm takes to run 
+        as a function of the length of the input. An algorithm with lower time complexity is considered more <b>efficient</b> 
+        because it completes tasks faster for larger input sizes.
+    </p>
+
+    <p>
+        <b>Space Complexity</b> measures the total amount of memory or space required by an algorithm to execute completely. 
+        It includes both the space required by the input data and any auxiliary space used by the algorithm. 
+        Typically, Space Complexity is represented using Big O notation, such as O(n), to indicate how memory usage scales 
+        with input size.
+    </p>
 </body>
 
 </html>
