--- a/main.html
+++ b/main.html
@@ -12,18 +12,18 @@
 </script>
  <h1>Understanding Time, Space, and Complexity</h1>
 
-    <p>
-        Time complexity refers to the computational complexity that describes the amount of time an algorithm takes to run 
-        as a function of the length of the input. An algorithm with lower time complexity is considered more <b>efficient</b> 
-        because it completes tasks faster for larger input sizes.
-    </p>
+  <!-- First Paragraph -->
+  <p>
+    Time complexity is a way to measure how the runtime of an algorithm grows as the size of input increases. 
+    It helps determine how <strong>efficient</strong> an algorithm is in terms of execution time.
+  </p>
 
-    <p>
-        <b>Space Complexity</b> measures the total amount of memory or space required by an algorithm to execute completely. 
-        It includes both the space required by the input data and any auxiliary space used by the algorithm. 
-        Typically, Space Complexity is represented using Big O notation, such as O(n), to indicate how memory usage scales 
-        with input size.
-    </p>
+  <!-- Second Paragraph -->
+  <p>
+    <b>Space Complexity</b> refers to the amount of memory an algorithm uses during execution. 
+    It helps us understand how efficiently memory is utilized while solving a problem, 
+    and it can often be expressed as O(n) in Big O notation.
+  </p>
 </body>
 
 </html>
